Add renaming step s.t. package is generated correctly.

--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 </property>
 
 <property name="mdpc.file.install">
-d5manlegacyconvert.pl /usr/bin/d5manlegacyconvert
+d5manlegacyconvert /usr/bin
 d5manlegacycommonres /usr/share/mdvl-d5man-legacy
 d5manlegacy2xml/d5manlegacy2xml /usr/bin
 d5manlegacyexport/d5manlegacyexport.jar /usr/share/java
@@ -25,16 +25,12 @@ stylesheets /usr/share/doc/mdvl-d5man-legacy
 README.md /usr/share/doc/mdvl-d5man-legacy
 </property>
 
-<!-- PART OF TPL HERE FOR USE IN BUILD -->
-<property environment="env"/>
-<condition property="masysma.internal.includepath.rel" value="${env.MDVL_CI_PHOENIX_ROOT}" else=".."><isset property="env.MDVL_CI_PHOENIX_ROOT"/></condition>
-<property name="masysma.internal.includepath" location="${masysma.internal.includepath.rel}"/>
-
 <!-- SPECIFIC BUILD TODO THIS IS RECURSIVE ANT SHOULD BE SUPPORTED IN TEMPLATE! -->
 <target name="build">
 	<ant dir="d5manlegacy2xml"/>
 	<ant dir="d5manlegacyioresolve"/>
-	<ant dir="d5manlegacyexport"    target="jar"/>
+	<ant dir="d5manlegacyexport" target="jar"/>
+	<copy file="d5manlegacyconvert.pl" tofile="d5manlegacyconvert"/>
 </target>
 
 <target name="clean">
@@ -47,6 +43,7 @@ README.md /usr/share/doc/mdvl-d5man-legacy
 	<ant dir="d5manlegacy2xml"      target="dist-clean"/>
 	<ant dir="d5manlegacyioresolve" target="dist-clean"/>
 	<ant dir="d5manlegacyexport"    target="dist-clean"/>
+	<delete file="d5manlegacyconvert"/>
 </target>
 
 <!-- CI INTEGRATION -->
@@ -59,7 +56,10 @@ README.md /usr/share/doc/mdvl-d5man-legacy
 	<property name="masysma.ci.runenv.name" value="i386"/>
 </target>
 
-<!-- TPL IMPORT (PARTIALLY GIVEN ABOVE) -->
+<!-- CONSTANT TPL IMPORT -->
+<property environment="env"/>
+<condition property="masysma.internal.includepath.rel" value="${env.MDVL_CI_PHOENIX_ROOT}" else=".."><isset property="env.MDVL_CI_PHOENIX_ROOT"/></condition>
+<property name="masysma.internal.includepath" location="${masysma.internal.includepath.rel}"/>
 <property name="masysma.internal.loadpath" value="${masysma.internal.includepath}/co-build/ant-build-template.xml"/>
 <condition property="masysma.internal.load" value="file://${masysma.internal.loadpath}" else="https://raw.githubusercontent.com/m7a/co-build/master/ant-build-template.xml"><resourceexists><file file="${masysma.internal.loadpath}"/></resourceexists></condition>
 <import><url url="${masysma.internal.load}"/></import>
