--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 </property>
 
 <property name="mdpc.file.install">
-d5manlegacyconvert /usr/bin
+d5manlegacyconvert/d5manlegacyconvert /usr/bin
 d5manlegacycommonres /usr/share/mdvl-d5man-legacy
 d5manlegacy2xml/d5manlegacy2xml /usr/bin
 d5manlegacyexport/d5manlegacyexport.jar /usr/share/java
@@ -24,27 +24,6 @@ d5manlegacyioresolve/d5manlegacyioresolve /usr/bin
 stylesheets /usr/share/doc/mdvl-d5man-legacy
 README.md /usr/share/doc/mdvl-d5man-legacy
 </property>
-
-<!-- SPECIFIC BUILD TODO THIS IS RECURSIVE ANT SHOULD BE SUPPORTED IN TEMPLATE! -->
-<target name="build">
-	<ant dir="d5manlegacy2xml"/>
-	<ant dir="d5manlegacyioresolve"/>
-	<ant dir="d5manlegacyexport" target="jar"/>
-	<copy file="d5manlegacyconvert.pl" tofile="d5manlegacyconvert"/>
-</target>
-
-<target name="clean">
-	<ant dir="d5manlegacy2xml"      target="clean"/>
-	<ant dir="d5manlegacyioresolve" target="clean"/>
-	<ant dir="d5manlegacyexport"    target="clean"/>
-</target>
-
-<target name="dist-clean" depends="clean">
-	<ant dir="d5manlegacy2xml"      target="dist-clean"/>
-	<ant dir="d5manlegacyioresolve" target="dist-clean"/>
-	<ant dir="d5manlegacyexport"    target="dist-clean"/>
-	<delete file="d5manlegacyconvert"/>
-</target>
 
 <!-- CI INTEGRATION -->
 <target name="package_triggered" depends="package">
