Add trigger for armhf build.

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,11 @@ README.md /usr/share/doc/mdvl-d5man-legacy
 	<property name="masysma.ci.runenv"      value="ssh"/>
 	<property name="masysma.ci.runenv.name" value="i386"/>
 </target>
+<target name="package_triggered_armhf" depends="package">
+	<property name="masysma.ci.trigger"     value="newver"/>
+	<property name="masysma.ci.runenv"      value="ssh"/>
+	<property name="masysma.ci.runenv.name" value="armhf"/>
+</target>
 
 <!-- CONSTANT TPL IMPORT -->
 <property environment="env"/>
